data/all_generated_tests/raw_wast_tests/if_InfiniteLoops_1561.wast
;; 2. **Test Description**:    Nested loops with differing block types where the outer loop contains an `if` and the inner loop uses `br_if`:    - Verifies if the nested context handling maintains proper label management to avoid infinite looping.

(assert_invalid
  (module (func $nested-loop-with-if-br_if
    (block (loop (if (i32.const 1) 
      (then (loop (br_if 1 (i32.const 0)))))
    ))
  ))
  "type mismatch"
)